force-app/main/default/objects/Lead/fields/Affiliated_Board__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Board__c</fullName>
    <label>Affiliated Board</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICSE</fullName>
            </value>
            <value>
                <fullName>CBSE</fullName>
            </value>
            <value>
                <fullName>IGCSE</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Regional Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>