force-app/main/default/objects/Lead/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;25</fullName>
            </value>
            <value>
                <fullName>25-50</fullName>
            </value>
            <value>
                <fullName>50-75</fullName>
            </value>
            <value>
                <fullName>75-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>