force-app/main/default/objects/Lead/fields/Classes__c.field-meta.xml
<CustomField>
    <fullName>Classes__c</fullName>
    <label>Classes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nursery - KG</fullName>
            </value>
            <value>
                <fullName>Nursery - 5th</fullName>
            </value>
            <value>
                <fullName>Nursery - 10th</fullName>
            </value>
            <value>
                <fullName>Nursery - 12th</fullName>
            </value>
            <value>
                <fullName>1st - 10th</fullName>
            </value>
            <value>
                <fullName>1st - 12th</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>