force-app/main/default/objects/Lead/fields/Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Course_Duration__c</fullName>
    <label>Course Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-9 Months</fullName>
            </value>
            <value>
                <fullName>9-12 Months</fullName>
            </value>
            <value>
                <fullName>12+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>