force-app/main/default/objects/Lead/fields/Courses_offered__c.field-meta.xml
<CustomField>
    <fullName>Courses_offered__c</fullName>
    <label>Courses offered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>