force-app/main/default/objects/Lead/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <label>Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;50000</fullName>
            </value>
            <value>
                <fullName>50000-75000</fullName>
            </value>
            <value>
                <fullName>75000-100000</fullName>
            </value>
            <value>
                <fullName>100000-150000</fullName>
            </value>
            <value>
                <fullName>150000-200000</fullName>
            </value>
            <value>
                <fullName>200000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>