force-app/main/default/objects/Lead/fields/Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>Geo_Location__c</fullName>
    <label>Geo Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>