force-app/main/default/objects/Lead/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channels</valueSetName>
    </valueSet>
</CustomField>