force-app/main/default/objects/Lead/fields/Lead_Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owned_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owned By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>