force-app/main/default/objects/Lead/fields/Masked_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Masked_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>