force-app/main/default/objects/Lead/fields/ModeOfClasses__c.field-meta.xml
<CustomField>
    <fullName>ModeOfClasses__c</fullName>
    <label>Mode of Classes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_Of_Classes</valueSetName>
    </valueSet>
</CustomField>