force-app/main/default/objects/Lead/fields/NumberOfCampus__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCampus__c</fullName>
    <label>No. of Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_No</valueSetName>
    </valueSet>
</CustomField>