force-app/main/default/objects/Lead/fields/NumberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudents__c</fullName>
    <label>No. of Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>