force-app/main/default/objects/Lead/fields/Placement_offer__c.field-meta.xml
<CustomField>
    <fullName>Placement_offer__c</fullName>
    <label>Placement offer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>