force-app/main/default/objects/Lead/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>