force-app/main/default/objects/Lead/fields/Product_Interested__c.field-meta.xml
<CustomField>
    <fullName>Product_Interested__c</fullName>
    <label>Product Interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>