force-app/main/default/objects/Lead/fields/Selection_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Selection_Criteria__c</fullName>
    <label>Selection Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aptitude Test</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Educational Score</fullName>
            </value>
            <value>
                <fullName>Work Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>