force-app/main/default/objects/Lead/fields/Tie_ups_Company__c.field-meta.xml
<CustomField>
    <fullName>Tie_ups_Company__c</fullName>
    <label>Tie-ups Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>