force-app/main/default/objects/Lead/recordTypes/Consumer_EL.recordType-meta.xml
<RecordType>
    <fullName>Consumer_EL</fullName>
    <active>false</active>
    <businessProcess>Partner Process</businessProcess>
    <label>Consumer - EL</label>
</RecordType>