force-app/main/default/objects/Lead/recordTypes/Consumer_LAP.recordType-meta.xml
<RecordType>
    <fullName>Consumer_LAP</fullName>
    <active>true</active>
    <businessProcess>Partner Process</businessProcess>
    <label>Consumer - LAP</label>
</RecordType>