force-app/main/default/objects/Lead/recordTypes/Partner_EL.recordType-meta.xml
<RecordType>
    <fullName>Partner_EL</fullName>
    <active>true</active>
    <businessProcess>Partner Process</businessProcess>
    <label>Partner - EL</label>
</RecordType>