force-app/main/default/objects/Lead/listViews/AltiFi_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>AltiFi_Sales_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Sales - AltiFi</label>
    <queue>Sales_AltiFi</queue>
    <sharedTo>
        <group>Sales_AltiFi</group>
    </sharedTo>
</ListView>