force-app/main/default/objects/Lead/listViews/EL_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>EL_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Sales - EL</label>
    <queue>Sales_EL</queue>
    <sharedTo>
        <group>Sales_EL</group>
    </sharedTo>
</ListView>