force-app/main/default/objects/Lead/listViews/EL_Leads.listView-meta.xml
<ListView>
    <fullName>EL_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Lead_Owned_By__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Product_Interested__c</field>
        <operation>equals</operation>
        <value>Education Loan</value>
    </filters>
    <label>My Leads - LifeTime</label>
</ListView>