force-app/main/default/objects/Lead/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Leads</label>
</ListView>