force-app/main/default/objects/Lead/listViews/Sales_LAP_Lead.listView-meta.xml
<ListView>
    <fullName>Sales_LAP_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Sales - LAP</label>
    <queue>Sales_LAP</queue>
    <sharedTo>
        <group>Sales_LAP</group>
    </sharedTo>
</ListView>